json and create class

--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <!-- Font Karla -->
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
-    <!-- Custom Css -->
+    <!-- General Css -->
     <link rel="stylesheet" href="../css/styles.css">
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="../css/main_style.css">
     <!-- Data Base JSON -->
     <script src="../assets/json/database.json"></script>
     
@@ -38,7 +40,7 @@
                     <a href="#"><b>Posturas</b></a>
                 </li>
                 <li>
-                    <a href="#" id="clase"><b>Crear Clase</b></a>
+                    <a href="../html/index2.html" id="clase"><b>Crear Clase</b></a>
                 </li>
             </ul>
             <ul class="nav-menu-right">
@@ -225,7 +227,6 @@
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Main JS -->
-    <script src="../Js/main.js"></script>
-    <!-- <script src="../Js/test.js"></script> -->
+    <script src="../Js/main_page.js"></script>
 </body>
 </html>
