--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     <!-- General Css -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Custom Css -->
-    <link rel="stylesheet" href="../css/main_style.css">
+    <link rel="stylesheet" href="../css/index_style.css">
     <!-- Data Base JSON -->
     <script src="../assets/json/database.json"></script>
     
@@ -40,7 +40,7 @@
                     <a href="#"><b>Posturas</b></a>
                 </li>
                 <li>
-                    <a href="../html/index2.html" id="clase"><b>Crear Clase</b></a>
+                    <a href="../html/createclass.html" id="clase"><b>Crear Clase</b></a>
                 </li>
             </ul>
             <ul class="nav-menu-right">
@@ -227,6 +227,6 @@
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Main JS -->
-    <script src="../Js/main_page.js"></script>
+    <script src="../Js/index.js"></script>
 </body>
 </html>
