--- a/html/createclass.html
+++ b/html/createclass.html
@@ -39,7 +39,7 @@
         </div>
     </div> -->
 
-    <div class="body_box">
+    <!-- <div class="body_box">
         <div class="box">
             <h2>Elementos de Clase Personalizada</h2>
             <ul>
@@ -50,7 +50,7 @@
                 <li><span>1</span>item one</li>
             </ul>
         </div>
-    </div>
+    </div> -->
     
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
