add display menu functions

--- a/html/createclass.html
+++ b/html/createclass.html
@@ -39,21 +39,20 @@
         </div>
     </div> -->
 
-    <!-- <div class="body_box">
+    <div class="body_box">
         <div class="box">
             <h2>Elementos de Clase Personalizada</h2>
-            <ul>
-                <li><span>1</span>item one</li>
-                <li><span>1</span>item one</li>
-                <li><span>1</span>item one</li>
-                <li><span>1</span>item one</li>
-                <li><span>1</span>item one</li>
+            <ul class="elements">
+                <!-- <li><span>1</span>item one</li> -->
             </ul>
         </div>
-    </div> -->
+    </div>
     
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- Main Js -->
     <!-- <script src="../Js/createclass.js"></script> -->
     <script src="../Js/test.js"></script>
