--- a/html/createclass.html
+++ b/html/createclass.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- CARD -->
-    <!-- <div class="body_cards">
+    <div class="body_cards">
         <div class="container_card">
             <div class="card">
                 <div class="img_card">
@@ -35,18 +35,19 @@
                 <div class="info_description">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta repellendus harum repellat aperiam, ipsam quibusdam recusandae, voluptate, odit natus velit iusto quia. Accusantium error voluptates esse officia tenetur blanditiis similique!</p>
                 </div>
+                </div>
             </div>
-        </div>
-    </div> -->
-
-    <div class="body_box">
-        <div class="box">
-            <h2>Elementos de Clase Personalizada</h2>
-            <ul class="elements">
-                <!-- <li><span>1</span>item one</li> -->
-            </ul>
+            <div class="body_box">
+                <div class="box">
+                    <h2>Elementos de Clase Personalizada</h2>
+                    <ul class="elements">
+                        <!-- <li><span>1</span>item one</li> -->
+                    </ul>
+                </div>
         </div>
     </div>
+
+    
     
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
