--- a/html/createclass.html
+++ b/html/createclass.html
@@ -69,39 +69,16 @@
 <div class="carousel">
     <h3>Clases Personalizadas</h3>
     <div class="carousel__contenedor">
-        <button aria-label="Anterior" class="carousel__anterior">
+        <!-- <button aria-label="Anterior" class="carousel__anterior">
             <i class="fas fa-chevron-left"></i>
         </button>
 
         <div class="carousel__lista">
-            <!-- <div class="carousel__elemento">
-                <img src="https://www.dropbox.com/s/h0ehjaz1wa9xfu1/lowlunge.svg?raw=1" alt="">
-                <p>Anjaneyasana</p>
-            </div>
-            <div class="carousel__elemento">
-                <img src="https://www.dropbox.com/s/ji0otecqx42by00/seatedforwardfold.svg?raw=1" alt="">
-                <p>Paschimottanasana</p>
-            </div>
-            <div class="carousel__elemento">
-                <img src="https://www.dropbox.com/s/j7p2600bmf840e0/pyramid.svg?raw=1" alt="">
-                <p>Parsvottanasana</p>
-            </div>
-            <div class="carousel__elemento">
-                <img src="https://www.dropbox.com/s/mn2ktlihp12mtfa/tree.svg?raw=1" alt="">
-                <p>Vrksasana</p>
-            </div>
-            <div class="carousel__elemento">
-                <img src="https://www.dropbox.com/s/l41pfqjwmjoy5os/triangle.svg?raw=1" alt="">
-                <p>Trikonasana</p>
-            </div>
-            <div class="carousel__elemento">
-                <img src="https://www.dropbox.com/s/d1dbdvo4l7xry4w/downdogflip.svg?raw=1" alt="">
-                <p>Camatkarasana</p>
-            </div> -->
+            
         </div>
 
         <button aria-label="Siguiente" class="carousel__siguiente">
-            <i class="fas fa-chevron-right"></i>
+            <i class="fas fa-chevron-right"></i> -->
         </button>
     </div>
 
