delete and create class functions

--- a/html/createclass.html
+++ b/html/createclass.html
@@ -50,16 +50,16 @@
                     </div>
                     <button type="button" class="button_save">
                         <span class="button_text">Guardar Clase</span>
-                        <span class="button_icon"><ion-icon name="cloud-upload-outline"></ion-icon></span>
+                        <span class="button_icon"><ion-icon name="cloud-upload"></ion-icon></span>
                     </button>
                     <button type="button" class="button_error">
-                        <span class="button_text">Eliminar Clase</span>
-                        <span class="button_icon"><ion-icon name="trash-outline"></ion-icon></span>
+                        <span class="button_text">Limpiar Clase</span>
+                        <span class="button_icon"><ion-icon name="trash-bin"></ion-icon></span>
                     </button>
                 </div>
                 <div class="button_clear_container">
                     <button type="button" class="button_clear active">
-                        <span class="button_icon_mini"><ion-icon name="close-circle-outline"></ion-icon></span>
+                        <span class="button_icon_mini"><ion-icon name="arrow-undo-outline"></ion-icon></span>
                     </button>
                 </div>
             </div>
